Fix homepage when javascript is disabled.
Instead of displaying all images which makes the page unreadable, only
display one image picked randomly.

--- a/style/home.css
+++ b/style/home.css
@@ -39,6 +39,10 @@
 	padding: 0;
 }
 
+#no-show-slides {
+	display: none;
+}
+
 #slides img {
 	cursor: pointer;
 }
